Ansible/Mini-Projects/project1-webserver-setup/terraform/main.tf
resource "aws_instance" "web" {
  ami                    = var.ami
  instance_type          = var.instance_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.web_sg.id]

  tags = {
    Name = "Project1-WebServer"
  }

  provisioner "local-exec" {
    command = <<EOT
  echo "[webserver]" > ../ansible/inventory.ini
  echo "${self.public_ip} ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/my-key-pair.pem" >> ../ansible/inventory.ini
  EOT
  }
}

resource "aws_security_group" "web_sg" {
  name        = "web-sg"
  description = "Allow HTTP and SSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "public_ip" {
  value = aws_instance.web.public_ip
}
